Remove box flap test, resolve toolbox flap issue on mobile

--- a/style.css
+++ b/style.css
@@ -330,6 +330,13 @@ h3 {
     /* transition: 0.5s; */
 }
 
+#flap:hover #flap {
+    transform: rotateX(170deg);
+    transition: transform 0.5s 0.5s;
+    /* opacity: 75%; */
+    /* transition: 0.5s; */
+}
+
 /* 
 #toolbox:hover #handle {
     opacity: 0%;
@@ -340,70 +347,3 @@ h3 {
 /* .project-content:not(:hover) {
     opacity: 0;
 } */
-
-
-
-/* box flap test */
-#box {
-  position: relative;
-  top: 170px;
-  left: 170px;
-  width: 300px;
-  height: 300px;
-  border: 1px solid black;
-  perspective: 800px;
-  transform-style: preserve-3d;
-}
-#flap1, #flap2, #flap3, #flap4 {
-  position: absolute;
-}
-#flap1 {
-  background-color: red;
-  width: 150px;
-  height: 300px;
-  z-index: 1;
-  transform: translateZ(1px);
-  transform-origin: 0 0;
-  transition: transform 1s 1.5s;
-}
-#flap2 {
-  left: 150px;
-  background-color: blue;
-  width: 150px;
-  height: 300px;
-  z-index: 1;
-  transform: translateZ(1px);
-  transform-origin: 100% 0;
-  transition: transform 1s ease 1s;
-}
-#flap3 {
-  background-color: green;
-  width: 300px;
-  height: 150px;
-  transform-origin: 0 0;
-  transition: transform 1s ease 0.5s;
-}
-#flap4 {
-  background-color: yellow;
-  top: 150px;
-  width: 300px;
-  height: 150px;
-  transform-origin: 0 100%;
-  transition: transform 1s ease;
-}
-#box:hover #flap1 {
-  transform: rotateY(-170deg) translateZ(1px);
-  transition: transform 1s ease;
-}
-#box:hover #flap2 {
-  transform: rotateY(170deg) translateZ(1px);
-  transition: transform 1s ease 0.5s;
-}
-#box:hover #flap3 {
-  transform: rotateX(170deg);
-  transition: transform 1s ease 1s;
-}
-#box:hover #flap4 {
-  transform: rotateX(-170deg);
-  transition: transform 1s ease 1.5s;
-}
